--- a/src/addons/summarylist/addon.css
+++ b/src/addons/summarylist/addon.css
@@ -1,3 +1,9 @@
+.summary-list, .summary-item{
+ width: 100%;
+ margin: 1em 0;
+ padding: 0;
+ display: table;
+}
 .summary-buttons{
  float: right;
 }
