--- a/src/addons/blockly/media/blockly.css
+++ b/src/addons/blockly/media/blockly.css
@@ -1,34 +1,13 @@
-/**
- * Visual Blocks Editor
- *
- * Copyright 2012 Google Inc.
- * http://code.google.com/p/blockly/
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-/**
- * @fileoverview Style sheet for a Blockly editor.
- * @author fraser@google.com (Neil Fraser)
- */
 .blocklySvg {
   background-color: #fff;
 }
+.blocklyWidgetDiv {
+  position: absolute;
+  display: none;
+  z-index: 999;
+}
 .blocklyDraggable {
-  /* Hotspot coordinates are baked into the CUR file, but they are still
-     required in the CSS due to a Chrome bug.
-     http://code.google.com/p/chromium/issues/detail?id=1446 */
-  cursor: url(handopen.cur) 8 5, auto;
+  cursor: url(handopen.cur) 8 5 , auto;
 }
 .blocklyResizeSE {
   fill: #aaa;
@@ -43,7 +22,7 @@
   stroke: #888;
 }
 .blocklyHighlightedConnectionPath {
-  stroke-width: 2px;
+  stroke-width: 4px;
   stroke: #fc3;
   fill: none;
 }
@@ -53,61 +32,52 @@
   stroke-linecap: round;
 }
 .blocklySelected>.blocklyPath {
-  stroke-width: 1px;
+  stroke-width: 3px;
   stroke: #fc3;
 }
 .blocklySelected>.blocklyPathLight {
   display: none;
 }
-.blocklyDragging>.blocklyPath,
-.blocklyDragging>.blocklyPathLight {
-  fill-opacity: 0.8;
-  stroke-opacity: 0.8;
+.blocklyDragging>.blocklyPath, .blocklyDragging>.blocklyPathLight {
+  fill-opacity: .8;
+  stroke-opacity: .8;
 }
 .blocklyDragging>.blocklyPathDark {
   display: none;
 }
 .blocklyDisabled>.blocklyPath {
-  fill-opacity: 0.50;
-  stroke-opacity: 0.50;
+  fill-opacity: .5;
+  stroke-opacity: .5;
 }
-.blocklyDisabled>.blocklyPathLight,
-.blocklyDisabled>.blocklyPathDark {
+.blocklyDisabled>.blocklyPathLight, .blocklyDisabled>.blocklyPathDark {
   display: none;
 }
 .blocklyText {
   cursor: default;
   font-family: sans-serif;
-  font-size: 9pt;
+  font-size: 11pt;
   fill: #fff;
 }
 .blocklyNonEditableText>text {
   pointer-events: none;
 }
-.blocklyNonEditableText>rect,
-.blocklyEditableText>rect {
+.blocklyNonEditableText>rect, .blocklyEditableText>rect {
   fill: #fff;
-  fill-opacity: 0.6;
+  fill-opacity: .6;
 }
-.blocklyNonEditableText>text,
-.blocklyEditableText>text {
+.blocklyNonEditableText>text, .blocklyEditableText>text {
   fill: #000;
 }
 .blocklyEditableText:hover>rect {
   stroke-width: 2;
   stroke: #fff;
 }
-/*
- * Don't allow users to select text.
- * It gets annoying when trying to drag a block and selected text moves instead.
- */
 .blocklySvg text {
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
   cursor: inherit;
 }
-
 .blocklyHidden {
   display: none;
 }
@@ -116,9 +86,7 @@
   stroke-width: 1px;
   stroke: #d8d8d8;
 }
-.blocklyTooltipShadow,
-.blocklyContextMenuShadow,
-.blocklyDropdownMenuShadow {
+.blocklyTooltipShadow, .blocklyContextMenuShadow, .blocklyDropdownMenuShadow {
   fill: #bbb;
   filter: url(#blocklyShadowFilter);
 }
@@ -127,7 +95,6 @@
   font-size: 9pt;
   fill: #000;
 }
-
 .blocklyIconShield {
   cursor: default;
   fill: #00c;
@@ -149,8 +116,6 @@
   fill: #ccc;
   text-anchor: middle;
 }
-.blocklyWarningBody {
-}
 .blocklyMinimalBody {
   margin: 0;
   padding: 0;
@@ -164,56 +129,39 @@
 }
 .blocklyHtmlInput {
   font-family: sans-serif;
-  font-size: 9pt;
+  font-size: 11pt;
   border: none;
   outline: none;
 }
-.blocklyContextMenuBackground,
-.blocklyMutatorBackground {
+.blocklyContextMenuBackground, .blocklyMutatorBackground {
   fill: #fff;
   stroke-width: 1;
   stroke: #ddd;
 }
-.blocklyContextMenuOptions>.blocklyMenuDiv,
-.blocklyContextMenuOptions>.blocklyMenuDivDisabled,
-.blocklyDropdownMenuOptions>.blocklyMenuDiv {
+.blocklyContextMenuOptions>.blocklyMenuDiv, .blocklyContextMenuOptions>.blocklyMenuDivDisabled, .blocklyDropdownMenuOptions>.blocklyMenuDiv {
   fill: #fff;
 }
-.blocklyToolboxOptions>.blocklyMenuDiv {
-  fill: #ddd;
-}
-.blocklyToolboxOptions>.blocklyMenuDiv:hover {
-  fill: #e4e4e4;
-}
-.blocklyContextMenuOptions>.blocklyMenuDiv:hover>rect,
-.blocklyDropdownMenuOptions>.blocklyMenuDiv:hover>rect {
-  fill: #57e;
-}
-.blocklyMenuSelected>rect {
+.blocklyContextMenuOptions>.blocklyMenuDiv:hover>rect, .blocklyDropdownMenuOptions>.blocklyMenuDiv:hover>rect, .blocklyMenuSelected>rect {
   fill: #57e;
 }
 .blocklyMenuText {
   cursor: default !important;
   font-family: sans-serif;
-  font-size: 12px; /* All context menu sizes are based on pixels. */
+  font-size: 15px;
   fill: #000;
 }
-.blocklyContextMenuOptions>.blocklyMenuDiv:hover>.blocklyMenuText,
-.blocklyDropdownMenuOptions>.blocklyMenuDiv:hover>.blocklyMenuText {
-  fill: #fff;
-}
-.blocklyMenuSelected>.blocklyMenuText {
+.blocklyContextMenuOptions>.blocklyMenuDiv:hover>.blocklyMenuText, .blocklyDropdownMenuOptions>.blocklyMenuDiv:hover>.blocklyMenuText, .blocklyMenuSelected>.blocklyMenuText {
   fill: #fff;
 }
 .blocklyMenuDivDisabled>.blocklyMenuText {
   fill: #ccc;
 }
-.blocklyToolboxBackground {
-  fill: #ddd;
-}
 .blocklyFlyoutBackground {
   fill: #ddd;
-  fill-opacity: 0.8;
+  fill-opacity: .8;
+}
+.blocklyColourBackground {
+  fill: #666;
 }
 .blocklyScrollbarBackground {
   fill: #fff;
@@ -223,10 +171,110 @@
 .blocklyScrollbarKnob {
   fill: #ccc;
 }
-.blocklyScrollbarBackground:hover+.blocklyScrollbarKnob,
-.blocklyScrollbarKnob:hover {
+.blocklyScrollbarBackground:hover+.blocklyScrollbarKnob, .blocklyScrollbarKnob:hover {
   fill: #bbb;
 }
 .blocklyInvalidInput {
   background: #faa;
+}
+.blocklyToolboxDiv {
+  background-color: #ddd;
+  display: none;
+  overflow-x: visible;
+  overflow-y: auto;
+  position: absolute;
+  z-index: 888;
+}
+.blocklyTreeRoot {
+  padding: 4px 0;
+}
+.blocklyTreeRoot:focus {
+  outline: none;
+}
+.blocklyTreeRow {
+  line-height: 22px;
+  height: 22px;
+  padding-right: 1em;
+  white-space: nowrap;
+}
+.blocklyToolboxDiv[dir="RTL"] .blocklyTreeRow {
+  padding-right: 0;
+  padding-left: 1em !important;
+}
+.blocklyTreeRow:hover {
+  background-color: #e4e4e4;
+}
+.blocklyTreeIcon {
+  height: 16px;
+  width: 16px;
+  vertical-align: middle;
+  background-image: url(tree.png);
+}
+.blocklyTreeIconClosedLtr {
+  background-position: -32px -1px;
+}
+.blocklyTreeIconClosedRtl {
+  background-position: 0 -1px;
+}
+.blocklyTreeIconOpen {
+  background-position: -16px -1px;
+}
+.blocklyTreeIconNone {
+  background-position: -48px -1px;
+}
+.blocklyTreeSelected>.blocklyTreeIconClosedLtr {
+  background-position: -32px -17px;
+}
+.blocklyTreeSelected>.blocklyTreeIconClosedRtl {
+  background-position: 0 -17px;
+}
+.blocklyTreeSelected>.blocklyTreeIconOpen {
+  background-position: -16px -17px;
+}
+.blocklyTreeSelected>.blocklyTreeIconNone {
+  background-position: -48px -17px;
+}
+.blocklyTreeLabel {
+  cursor: default;
+  font-family: sans-serif;
+  font-size: 16px;
+  padding: 0 3px;
+  vertical-align: middle;
+}
+.blocklyTreeSelected {
+  background-color: #57e !important;
+}
+.blocklyTreeSelected .blocklyTreeLabel {
+  color: #fff;
+}
+.goog-palette {
+  outline: none;
+  cursor: default;
+}
+.goog-palette-table {
+  border: 1px solid #666;
+  border-collapse: collapse;
+}
+.goog-palette-cell {
+  height: 13px;
+  width: 15px;
+  margin: 0;
+  border: 0;
+  text-align: center;
+  vertical-align: middle;
+  border-right: 1px solid #666;
+  font-size: 1px;
+}
+.goog-palette-colorswatch {
+  position: relative;
+  height: 13px;
+  width: 15px;
+  border: 1px solid #666;
+}
+.goog-palette-cell-hover .goog-palette-colorswatch {
+  border: 1px solid #fff;
+}
+.goog-palette-cell-selected .goog-palette-colorswatch {
+  border: 1px solid #000;
+  color: #fff;
 }
