add optional addon

--- a/css/json.edit.css
+++ b/css/json.edit.css
@@ -14,11 +14,16 @@
  font-weight: bold;
 }
 
-.je-field>button{
+.je-field>button, .je-optional-value>button{
  float: right;
 }
 
-.je-field>input, .je-field>select{
+.je-optional-value{
+ width: 100%;
+ clear: both;
+}
+
+.je-field>input, .je-field>select, .je-optional-value>input, .je-optional-value>select, .je-optional-cont>input, .je-optional-cont>select {
  float: right;
  width: 50%;
 }
