--- a/src/addons/blockly/media/blockly.css
+++ b/src/addons/blockly/media/blockly.css
@@ -1,5 +1,5 @@
 .blocklySvg {
-  background-color: #fff;
+ background: url("../../../../../img/bg.png") repeat scroll 0 0 transparent;
 }
 .blocklyWidgetDiv {
   position: absolute;
@@ -32,8 +32,8 @@
   stroke-linecap: round;
 }
 .blocklySelected>.blocklyPath {
-  stroke-width: 3px;
-  stroke: #fc3;
+  stroke-width: 2px;
+  stroke: #465158;
 }
 .blocklySelected>.blocklyPathLight {
   display: none;
@@ -54,23 +54,23 @@
 }
 .blocklyText {
   cursor: default;
-  font-family: sans-serif;
+  font-family: Helvetica;
   font-size: 11pt;
-  fill: #fff;
+  fill: #fefefe;
 }
 .blocklyNonEditableText>text {
   pointer-events: none;
 }
 .blocklyNonEditableText>rect, .blocklyEditableText>rect {
-  fill: #fff;
+  fill: #fefefe;
   fill-opacity: .6;
 }
 .blocklyNonEditableText>text, .blocklyEditableText>text {
-  fill: #000;
+  fill: #444;
 }
 .blocklyEditableText:hover>rect {
   stroke-width: 2;
-  stroke: #fff;
+  stroke: #fefefe;
 }
 .blocklySvg text {
   -moz-user-select: none;
@@ -81,19 +81,23 @@
 .blocklyHidden {
   display: none;
 }
+.blocklyFieldDropdown:not(.blocklyHidden) {
+  display: block;
+}
 .blocklyTooltipBackground {
   fill: #ffffc7;
   stroke-width: 1px;
   stroke: #d8d8d8;
 }
-.blocklyTooltipShadow, .blocklyContextMenuShadow, .blocklyDropdownMenuShadow {
+.blocklyTooltipShadow,
+.blocklyDropdownMenuShadow {
   fill: #bbb;
   filter: url(#blocklyShadowFilter);
 }
 .blocklyTooltipText {
-  font-family: sans-serif;
+  font-family: Helvetica;
   font-size: 9pt;
-  fill: #000;
+  fill: #333;
 }
 .blocklyIconShield {
   cursor: default;
@@ -103,18 +107,20 @@
 }
 .blocklyIconGroup:hover>.blocklyIconShield {
   fill: #00f;
-  stroke: #fff;
+  stroke: #fefefe;
 }
 .blocklyIconGroup:hover>.blocklyIconMark {
-  fill: #fff;
+  fill: #fefefe;
 }
 .blocklyIconMark {
   cursor: default !important;
-  font-family: sans-serif;
+  font-family: Helvetica;
   font-size: 9pt;
   font-weight: bold;
   fill: #ccc;
   text-anchor: middle;
+}
+.blocklyWarningBody {
 }
 .blocklyMinimalBody {
   margin: 0;
@@ -128,57 +134,68 @@
   background-color: #ffc;
 }
 .blocklyHtmlInput {
-  font-family: sans-serif;
+  font-family: Helvetica;
   font-size: 11pt;
   border: none;
   outline: none;
+  width: 100%
 }
-.blocklyContextMenuBackground, .blocklyMutatorBackground {
-  fill: #fff;
+.blocklyMutatorBackground {
+  fill: #fefefe;
   stroke-width: 1;
   stroke: #ddd;
 }
-.blocklyContextMenuOptions>.blocklyMenuDiv, .blocklyContextMenuOptions>.blocklyMenuDivDisabled, .blocklyDropdownMenuOptions>.blocklyMenuDiv {
-  fill: #fff;
-}
-.blocklyContextMenuOptions>.blocklyMenuDiv:hover>rect, .blocklyDropdownMenuOptions>.blocklyMenuDiv:hover>rect, .blocklyMenuSelected>rect {
-  fill: #57e;
-}
-.blocklyMenuText {
-  cursor: default !important;
-  font-family: sans-serif;
-  font-size: 15px;
-  fill: #000;
-}
-.blocklyContextMenuOptions>.blocklyMenuDiv:hover>.blocklyMenuText, .blocklyDropdownMenuOptions>.blocklyMenuDiv:hover>.blocklyMenuText, .blocklyMenuSelected>.blocklyMenuText {
-  fill: #fff;
-}
-.blocklyMenuDivDisabled>.blocklyMenuText {
-  fill: #ccc;
-}
 .blocklyFlyoutBackground {
-  fill: #ddd;
-  fill-opacity: .8;
+  fill: #465158;
 }
 .blocklyColourBackground {
   fill: #666;
 }
 .blocklyScrollbarBackground {
-  fill: #fff;
-  stroke-width: 1;
-  stroke: #e4e4e4;
+ fill-opacity: 0;
+ stroke-width: 0;
 }
 .blocklyScrollbarKnob {
   fill: #ccc;
 }
-.blocklyScrollbarBackground:hover+.blocklyScrollbarKnob, .blocklyScrollbarKnob:hover {
+.blocklyScrollbarBackground:hover+.blocklyScrollbarKnob,
+.blocklyScrollbarKnob:hover {
   fill: #bbb;
 }
 .blocklyInvalidInput {
   background: #faa;
 }
+.blocklyAngleCircle {
+  stroke: #444;
+  stroke-width: 1;
+  fill: #ddd;
+  fill-opacity: .8;
+}
+.blocklyAngleMarks {
+  stroke: #444;
+  stroke-width: 1;
+}
+.blocklyAngleGauge {
+  fill: #f88;
+  fill-opacity: .8;
+}
+.blocklyAngleLine {
+  stroke: #f00;
+  stroke-width: 2;
+  stroke-linecap: round;
+}
+.blocklyContextMenu {
+  border-radius: 4px;
+}
+.blocklyDropdownMenu {
+  padding: 0 !important;
+}
+.blocklyWidgetDiv .goog-option-selected .goog-menuitem-checkbox,
+.blocklyWidgetDiv .goog-option-selected .goog-menuitem-icon {
+  background: url(sprites.png) no-repeat -48px -16px !important;
+}
 .blocklyToolboxDiv {
-  background-color: #ddd;
+  background-color: #323A40;
   display: none;
   overflow-x: visible;
   overflow-y: auto;
@@ -187,6 +204,8 @@
 }
 .blocklyTreeRoot {
   padding: 4px 0;
+  background-color: #323A40;
+  color: #fefefe;
 }
 .blocklyTreeRoot:focus {
   outline: none;
@@ -202,60 +221,58 @@
   padding-left: 1em !important;
 }
 .blocklyTreeRow:hover {
-  background-color: #e4e4e4;
+  background-color: #465158;
 }
 .blocklyTreeIcon {
   height: 16px;
   width: 16px;
   vertical-align: middle;
-  background-image: url(tree.png);
+  background-image: url(sprites.png);
 }
 .blocklyTreeIconClosedLtr {
   background-position: -32px -1px;
 }
 .blocklyTreeIconClosedRtl {
-  background-position: 0 -1px;
+  background-position: 0px -1px;
 }
 .blocklyTreeIconOpen {
   background-position: -16px -1px;
-}
-.blocklyTreeIconNone {
-  background-position: -48px -1px;
 }
 .blocklyTreeSelected>.blocklyTreeIconClosedLtr {
   background-position: -32px -17px;
 }
 .blocklyTreeSelected>.blocklyTreeIconClosedRtl {
-  background-position: 0 -17px;
+  background-position: 0px -17px;
 }
 .blocklyTreeSelected>.blocklyTreeIconOpen {
-  background-position: -16px -17px;
+  background-position: -16px -16px;
 }
+.blocklyTreeIconNone,
 .blocklyTreeSelected>.blocklyTreeIconNone {
-  background-position: -48px -17px;
+  background-position: -48px -1px;
 }
 .blocklyTreeLabel {
   cursor: default;
-  font-family: sans-serif;
-  font-size: 16px;
+  font-family: Helvetica;
+  font-size: 12px;
   padding: 0 3px;
   vertical-align: middle;
 }
-.blocklyTreeSelected {
-  background-color: #57e !important;
+.blocklyTreeSelected  {
+  background-color: #465158 !important;
 }
 .blocklyTreeSelected .blocklyTreeLabel {
-  color: #fff;
+  color: #fefefe;
 }
-.goog-palette {
+.blocklyWidgetDiv .goog-palette {
   outline: none;
   cursor: default;
 }
-.goog-palette-table {
+.blocklyWidgetDiv .goog-palette-table {
   border: 1px solid #666;
   border-collapse: collapse;
 }
-.goog-palette-cell {
+.blocklyWidgetDiv .goog-palette-cell {
   height: 13px;
   width: 15px;
   margin: 0;
@@ -265,16 +282,119 @@
   border-right: 1px solid #666;
   font-size: 1px;
 }
-.goog-palette-colorswatch {
+.blocklyWidgetDiv .goog-palette-colorswatch {
   position: relative;
   height: 13px;
   width: 15px;
   border: 1px solid #666;
 }
-.goog-palette-cell-hover .goog-palette-colorswatch {
-  border: 1px solid #fff;
+.blocklyWidgetDiv .goog-palette-cell-hover .goog-palette-colorswatch {
+  border: 1px solid #fefefe;
 }
-.goog-palette-cell-selected .goog-palette-colorswatch {
-  border: 1px solid #000;
-  color: #fff;
+.blocklyWidgetDiv .goog-palette-cell-selected .goog-palette-colorswatch {
+  border: 1px solid #333;
+  color: #fefefe;
+}
+.blocklyWidgetDiv .goog-menu {
+  background: #fefefe;
+  border-color: #ccc #666 #666 #ccc;
+  border-style: solid;
+  border-width: 1px;
+  cursor: default;
+  font: normal 13px Arial, Helvetica;
+  margin: 0;
+  outline: none;
+  padding: 4px 0;
+  position: absolute;
+  z-index: 20000;
+}
+.blocklyWidgetDiv .goog-menuitem {
+  color: #333;
+  font: normal 13px Arial, Helvetica;
+  list-style: none;
+  margin: 0;
+  padding: 4px 7em 4px 28px;
+  white-space: nowrap;
+}
+.blocklyWidgetDiv .goog-menuitem.goog-menuitem-rtl {
+  padding-left: 7em;
+  padding-right: 28px;
+}
+.blocklyWidgetDiv .goog-menu-nocheckbox .goog-menuitem,
+.blocklyWidgetDiv .goog-menu-noicon .goog-menuitem {
+  padding-left: 12px;
+}
+.blocklyWidgetDiv .goog-menu-noaccel .goog-menuitem {
+  padding-right: 20px;
+}
+.blocklyWidgetDiv .goog-menuitem-content {
+  color: #333;
+  font: normal 13px Arial, Helvetica;
+}
+.blocklyWidgetDiv .goog-menuitem-disabled .goog-menuitem-accel,
+.blocklyWidgetDiv .goog-menuitem-disabled .goog-menuitem-content {
+  color: #ccc !important;
+}
+.blocklyWidgetDiv .goog-menuitem-disabled .goog-menuitem-icon {
+  opacity: 0.3;
+  -moz-opacity: 0.3;
+  filter: alpha(opacity=30);
+}
+.blocklyWidgetDiv .goog-menuitem-highlight,
+.blocklyWidgetDiv .goog-menuitem-hover {
+  background-color: #d6e9f8;
+  border-color: #d6e9f8;
+  border-style: dotted;
+  border-width: 1px 0;
+  padding-bottom: 3px;
+  padding-top: 3px;
+}
+.blocklyWidgetDiv .goog-menuitem-checkbox,
+.blocklyWidgetDiv .goog-menuitem-icon {
+  background-repeat: no-repeat;
+  height: 16px;
+  left: 6px;
+  position: absolute;
+  right: auto;
+  vertical-align: middle;
+  width: 16px;
+}
+.blocklyWidgetDiv .goog-menuitem-rtl .goog-menuitem-checkbox,
+.blocklyWidgetDiv .goog-menuitem-rtl .goog-menuitem-icon {
+  left: auto;
+  right: 6px;
+}
+.blocklyWidgetDiv .goog-option-selected .goog-menuitem-checkbox,
+.blocklyWidgetDiv .goog-option-selected .goog-menuitem-icon {
+  background: url(//ssl.gstatic.com/editor/editortoolbar.png) no-repeat -512px 0;
+}
+.blocklyWidgetDiv .goog-menuitem-accel {
+  color: #999;
+  direction: ltr;
+  left: auto;
+  padding: 0 6px;
+  position: absolute;
+  right: 0;
+  text-align: right;
+}
+.blocklyWidgetDiv .goog-menuitem-rtl .goog-menuitem-accel {
+  left: 0;
+  right: auto;
+  text-align: left;
+}
+.blocklyWidgetDiv .goog-menuitem-mnemonic-hint {
+  text-decoration: underline;
+}
+.blocklyWidgetDiv .goog-menuitem-mnemonic-separator {
+  color: #999;
+  font-size: 12px;
+  padding-left: 4px;
+}
+.blocklyWidgetDiv .goog-menuseparator {
+  border-top: 1px solid #ccc;
+  margin: 4px 0;
+  padding: 0;
+}
+.blocklyBubbleText {
+  fill: #333;
 }
